--- a/modules/ROOT/pages/appendix/getting-started-resources.adoc
+++ b/modules/ROOT/pages/appendix/getting-started-resources.adoc
@@ -4,7 +4,7 @@
 :tags: get-started, introduction, resources, neo4j-help, cypher, graph, nosql-graph, neo4j-training
 :page-pagination:
 
-[#getting-started-resources]
+
 To help you along your path of learning more about Neo4j, we want to provide you with the resources which may encourage you to dive deeper into Neo4j products and graph technology.
 
 [#graphdb-resources]
@@ -88,5 +88,5 @@ When to use which? Read more about the differences between link:https://communit
 * https://twitch.tv/neo4j/[Weekly Twitch stream sessions^]
 * http://www.opencypher.org/[openCypher project^]
 * https://neo4j.com/customers/[Neo4j Customers^]
-* xref:graph-database.adoc[Neo4j Features^]
+* xref:get-started-with-neo4j/graph-database.adoc[Neo4j Features^]
 * https://neo4j.com/licensing/[Neo4j Editions^]
