--- a/modules/ROOT/pages/cypher-intro/results.adoc
+++ b/modules/ROOT/pages/cypher-intro/results.adoc
@@ -570,7 +570,7 @@ image:cypher_agg_count_results.jpg[role="popup-link"]
 // RETURN p.name, collect(friend.name) AS friend
 // ----
 
-// image::{img}cypher_agg_collect.jpg[role="popup-link"]
+// image::{neo4j-img-base-uri}cypher_agg_collect.jpg[role="popup-link"]
 
 [[cypher-intro-results-collecting-aggregation]]
 == Collecting aggregation
