--- a/modules/ROOT/pages/data-modeling/relational-to-graph-modeling.adoc
+++ b/modules/ROOT/pages/data-modeling/relational-to-graph-modeling.adoc
@@ -14,7 +14,7 @@ It will help to compare and contrast the steps of each process and help you iden
 If you are familiar with the relational data model that has tables, columns, relationship cardinalities, and other components, graph data modeling will not seem entirely foreign.
 The design of the data model still needs to be based upon requirements for access, queries, performance expectation, and business logic.
 However, the structure of a graph data model is laid out slightly differently.
-These differences were discussed in the xref:graphdb-vs-rdbms.adoc[Concepts: RDBMS to Graph] section earlier.
+These differences were discussed in the xref:appendix/graphdb-concepts/graphdb-vs-rdbms.adoc[Concepts: RDBMS to Graph] section earlier.
 
 You may have an entirely new project that you want to create a graph data model, but are only familiar with how to create the relational model.
 Or you could already have an existing project with a relational model that you want to convert to graph.
@@ -103,6 +103,6 @@ In an upcoming guide, how you model your graph data can impact queries, performa
 [#modeling-resources]
 == Resources
 * https://dzone.com/refcardz/from-relational-to-graph-a-developers-guide?chapter=1[DZone Refcard: From Relational to Graph^]
-* xref:graphdb-vs-rdbms.adoc[Concepts: Relational to Graph]
-* xref:cypher:guide-sql-to-cypher.adoc[From SQL to Cypher]
-* xref:graph-database.adoc#property-graph[Review: Property Graph Model]
+* xref:appendix/graphdb-concepts/graphdb-vs-rdbms.adoc[Concepts: Relational to Graph]
+// * xref:cypher:guide-sql-to-cypher.adoc[From SQL to Cypher]
+* xref:get-started-with-neo4j/graph-database.adoc#property-graph[Review: Property Graph Model]
