--- a/modules/ROOT/pages/languages-guides/java/java-third-party.adoc
+++ b/modules/ROOT/pages/languages-guides/java/java-third-party.adoc
@@ -97,7 +97,7 @@ At the bottom level of abstraction, a *native Java DSL* in the form of a fluent 
 [#neo4j-grails]
 === Groovy & Grails: Neo4j Grails Plugin
 
-// image::{img}grails.png[width=200,float=right]
+// image::{neo4j-img-base-uri}grails.png[width=200,float=right]
 
 The goal of GORM for Neo4j is to provide a 'as-complete-as-possible' GORM implementation that maps domain classes and instances to the Neo4j nodespace. The following features are supported:
 
@@ -118,7 +118,7 @@ The goal of GORM for Neo4j is to provide a 'as-complete-as-possible' GORM implem
 [#neo4j-scala]
 === Scala: neotypes
 
-// image::{img}scala.png[width=200,float="right"]
+// image::{neo4j-img-base-uri}scala.png[width=200,float="right"]
 
 Scala lightweight, type-safe, asynchronous driver (not opinionated on side-effect implementation) for neo4j.
 The project aims to provide seamless integration with most popular scala infrastructures such as lightbend (Akka, Akka-http, Lagom, etc), typelevel (cats, http4s, etc), twitter (finch, etc)...
