--- a/modules/ROOT/pages/languages-guides/neo4j-erlang-elixir.adoc
+++ b/modules/ROOT/pages/languages-guides/neo4j-erlang-elixir.adoc
@@ -28,8 +28,8 @@ Neo4j does not take any responsibility for their usability.
 [[neo4j-erlang-elixir]]
 == Neo4j for Erlang/Elixir Developers
 
-// image::{img}erlang.png[float=right,width=150]
-// image::{img}elixir.png[float=left,width=150]
+// image::{neo4j-img-base-uri}erlang.png[float=right,width=150]
+// image::{neo4j-img-base-uri}elixir.png[float=left,width=150]
 
 Members of the Erlang and Elixir community have invested a lot of time and love to develop these drivers, so if you use them, please provide feedback to the authors.
 
