--- a/modules/ROOT/pages/languages-guides/neo4j-go.adoc
+++ b/modules/ROOT/pages/languages-guides/neo4j-go.adoc
@@ -1,4 +1,3 @@
-[[neo4j-go]]
 = Using Neo4j from Go
 :go-driver-version: 4.4.3
 :tags: golang, go, app-development, applications
@@ -14,7 +13,7 @@ You should have link:{aura_signup}[created an Neo4j AuraDB cloud instance], or l
 [#neo4j-go]
 == Neo4j for Go Developers
 
-// image::{img}GO.jpg[width=150,float=right]
+// image::{neo4j-img-base-uri}GO.jpg[width=150,float=right]
 
 Neo4j provides drivers which allow you to make a connection to the database and develop applications
 which create, read, update, and delete information from the graph.
