--- a/modules/ROOT/pages/languages-guides/neo4j-javascript.adoc
+++ b/modules/ROOT/pages/languages-guides/neo4j-javascript.adoc
@@ -1,4 +1,3 @@
-[[neo4j-javascript]]
 = Neo4j from JavaScript
 :javascript-driver-version: 4.4.7
 :aura_signup: https://neo4j.com/cloud/aura/?ref=developer-guides
@@ -24,7 +23,7 @@ You should have link:{aura_signup}[created an Neo4j AuraDB cloud instance], or l
 [#neo4j-javascript]
 == Neo4j for JavaScript Developers
 
-// image::{img}nodejs.png[float=right,width=300]
+// image::{neo4j-img-base-uri}nodejs.png[float=right,width=300]
 
 Neo4j provides drivers which allow you to make a connection to the database and develop applications
 which create, read, update, and delete information from the graph.
